tests/ui/field_not_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
 --> tests/ui/field_not_clone.rs:7:5
  |
5 | #[derive(PureClone)]
  |          ---------
  |          |
  |          required by a bound introduced by this call
  |          in this derive macro expansion
6 | struct Bar {
7 |     f: Foo,
  |     ^ the trait `Clone` is not implemented for `Foo`
  |
  = note: this error originates in the derive macro `PureClone` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo` with `#[derive(Clone)]`
  |
3 + #[derive(Clone)]
4 | struct Foo;
  |

error[E0277]: the trait bound `Foo: PureClone` is not satisfied
 --> tests/ui/field_not_clone.rs:7:8
  |
7 |     f: Foo,
  |        ^^^ unsatisfied trait bound
  |
help: the trait `PureClone` is not implemented for `Foo`
 --> tests/ui/field_not_clone.rs:3:1
  |
3 | struct Foo;
  | ^^^^^^^^^^
  = help: the following other types implement trait `PureClone`:
            &T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
