tests/ui/field_not_clone.rs
use clone_cell::clone::PureClone;

struct Foo;

#[derive(PureClone)]
struct Bar {
    f: Foo,
}

fn main() {}
